# kraken_crawler_v1

./: Dockerfile  cloudbuild.yaml  extractors.py  items.json  kraken_data.py  main.py  pyproject.toml  requirements.txt
