[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "test2"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
scrapy = "^2.1"
extruct = "^0.9.0"
extraction = "^0.3.0"
nested-lookup = "^0.2.21"
[tool.poetry.dev-dependencies]
